# cookiecutter-qgis-plugin

./: .editorconfig  .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_directory}}/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_directory}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.project_directory}}/.github/workflows/: code-style.yml  release.yml  test-and-pre-release.yml
{{cookiecutter.project_directory}}/docs/: development.md  push_translations.yml
{{cookiecutter.project_directory}}/plugin_templates/: plugin_with_submodule.py  plugin_without_submodule.py
{{cookiecutter.project_directory}}/test/: test_plugin.py
{{cookiecutter.project_directory}}/{{cookiecutter.plugin_package}}/: __init__.py  build.py
