[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-qgis-plugin"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
  "cookiecutter~=2.0",
  "pip-tools~=6.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7.5",
  "black>=23.3.0",
  "flake8>=6.0.0",
  "flake8-2020>=1.8.0",
  "flake8-absolute-import>=1.0.0.1",
  "flake8-annotations>=3.0.1",
  "flake8-bugbear>=23.5.9",
  "flake8-builtins>=2.1.0",
  "flake8-comprehensions>=3.12.0",
  "flake8-docstrings>=1.7.0",
  "flake8-encodings[classes]>=0.5.0",
  "flake8-isort>=6.0.0",
  "flake8-mutable>=1.2.0",
  "flake8-noqa>=1.3.1",
  "flake8-pie>=0.16.0",
  "flake8-pytest-style>=1.7.2",
  "flake8-simplify>=0.20.0",
  "flake8-tidy-imports>=4.8.0",
  "flake8-use-fstring>=1.4",
  "flake8-useless-assert>=0.4.4",
  "isort>=5.12.0",
  "mypy>=1.2.0",
  "pep8-naming>=0.13.3",
  "pre-commit>=3.3.1",
  "pylint>=2.17.4",
]
test = [
  "pytest>=7.3.1",
  "pytest-cookies>=0.7.0",
  "pytest-instafail>=0.5.0",
]

[project.urls]
homepage = "https://github.com/GispoCoding/cookiecutter-qgis-plugin"

[tool.bandit]
exclude_dirs = ["{{cookiecutter.project_directory}}"]

[tool.bandit.assert_used]
skips = ['*/test_*.py']

[tool.black]
line-length = 88
force-exclude = "{{cookiecutter.project_directory}}"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = "{{cookiecutter.project_directory}}"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
]
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_reexport = true
show_column_numbers = true
show_error_context = true
strict_equality = true
strict_concatenate = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["{{cookiecutter.project_directory}}"]

[[tool.mypy.overrides]]
module = [
  "cookiecutter.*",
  "pytest_cookies.*",
]
ignore_missing_imports = true

[tool.pylint.MASTER]
ignore-paths = ['^\{\{cookiecutter\.project_directory\}\}$']

[tool.pylint.messages_control]
disable = [
  "invalid-name",               # C0103
  "missing-module-docstring",   # C0114
  "missing-class-docstring",    # C0115
  "missing-function-docstring", # C0116
  "line-too-long",              # C0301
  "import-error",               # E0401
]

[tool.pytest.ini_options]
addopts = "-v --tb=short --instafail"
testpaths = "tests"
