[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_directory}}"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
  "qgis",
  "QGIS",
  "PyQGIS",
]

[project.optional-dependencies]
debug = ["debugpy>=1.6.7"]
dev = [
  "bandit[toml]>=1.7.5",
  "black>=23.3.0",
  "flake8>=6.0.0",
  "flake8-2020>=1.8.0",
  "flake8-absolute-import>=1.0.0.1",
  "flake8-annotations>=3.0.1",
  "flake8-bugbear>=23.5.9",
  "flake8-builtins>=2.1.0",
  "flake8-comprehensions>=3.12.0",
  "flake8-docstrings>=1.7.0",
  "flake8-encodings[classes]>=0.5.0",
  "flake8-mutable>=1.2.0",
  "flake8-no-pep420>=2.4.0",
  "flake8-noqa>=1.3.1",
  "flake8-pie>=0.16.0",
  "flake8-print>=5.0.0",
  "flake8-pytest-style>=1.7.2",
  "flake8-qgis>=1.0.0",
  "flake8-simplify>=0.20.0",
  "flake8-tidy-imports>=4.8.0",
  "flake8-use-fstring>=1.4",
  "flake8-useless-assert>=0.4.4",
  "isort>=5.12.0",
  "mypy>=1.2.0",
  "pep8-naming>=0.13.3",
  "pip-tools>=6.13.0",
  "pre-commit>=3.3.1",
  "pylint>=2.17.4",
  # stubs
  "PyQt5-stubs~=5.15.6.0",
]
test = [
  "pytest>=7.3.1",
  "pytest-cov>=4.0.0",
  "pytest-qgis>=1.3.2",
]

[project.urls]
homepage = "{{cookiecutter.git_repo_url}}"

[tool.bandit.assert_used]
skips = ['*/test_*.py']

[tool.black]
line-length = 88

[tool.isort]
# Black compatible values for isort https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_reexport = true
show_column_numbers = true
show_error_context = true
strict_equality = true
strict_concatenate = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "debugpy",
  "ptvsd",
  "pydevd",
  "qgis.PyQt.*",
  "qgis.utils",
  "{{cookiecutter.plugin_package}}.qgis_plugin_tools.*",
  "qgis_plugin_tools.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
  "invalid-name",                  # C0103
  "missing-module-docstring",      # C0114
  "missing-class-docstring",       # C0115
  "missing-function-docstring",    # C0116
  "line-too-long",                 # C0301
  "import-error",                  # E0401
  "no-name-in-module",             # E0611
  "no-member",                     # E1101
]

[tool.pylint.design]
max-args = 10         # default 5  # R0913

[tool.pytest.ini_options]
addopts = "-v"
testpaths = "test"

[tool.coverage.report]
omit = ["{{cookiecutter.plugin_package}}/qgis_plugin_tools/*"]
